# RISCito-V

./: CMakeLists.txt  INFORME.tex  README.md  build.bat  build.sh
src/: disasm.cpp  disasm.hpp  main.cpp  simulator.cpp  simulator.hpp
tests/: asm.py  ecall_demo.s  loop_sum.s  quicksort.s  riscvtest.s  symmetric.s
